--- a/src/jquery-scroll-container.scss
+++ b/src/jquery-scroll-container.scss
@@ -34,7 +34,6 @@ $scrollbar-z-index: 100;
 
 .ps {
     //Bug fix from https://github.com/mdbootstrap/perfect-scrollbar/issues/792
-    direction: rtl;
 
     // Scrollbar rail styles
     .ps__rail-x {
@@ -125,7 +124,6 @@ $scrollbar-z-index: 100;
     //Container with contents
     .jq-scroll-container {
         //Bug fix from https://github.com/mdbootstrap/perfect-scrollbar/issues/792
-        direction: ltr;
 
         //Move content below scrollbars
         position: relative;
